--- a/05.Функции/01.Объявление.ipynb
+++ b/05.Функции/01.Объявление.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Тип функции иногда называется **сигнатурой**. Две функции имеют одинаковый тип или сигнатуру, если у них совпадают последовательности типов параметров и типов результатов. Названия параметров или результатов не имеет значения:"
+    "**Тип функции**(по-другому тип функции ещё называют **сигнатурой**) определяется последовательностьями типов параметров и типов результатов. Две функции имеют одинаковый тип, если у них совпадают последовательности типов параметров и типов результатов. Названия параметров или результатов не имеет значения:"
    ]
   },
   {
@@ -89,7 +89,7 @@
     }
    ],
    "source": [
-    "func add(x int, y int) int { return x + y }\n",
+    "результатовfunc add(x int, y int) int { return x + y }\n",
     "func sub(a int, b int) int { return a - b }\n",
     "\n",
     "fmt.Sprintf(\"%T\\n%T\", add, sub)"
