--- a/05.Функции/08.Panic и recover.ipynb
+++ b/05.Функции/08.Panic и recover.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Система типов Go позволяет найти многие ошибки во время компиляции, но некоторые ошибки как выход за границу массива или разыменовывание требует проверки во время выполнения программы. Когда runtime языка Go находит такого рода ошибки, оно **паникует**(panic).\n",
+    "Система типов Go позволяет найти многие ошибки во время компиляции, но некоторые ошибки как выход за границу массива или разыменовывание пустого указателя требуют проверки во время выполнения программы. Когда runtime языка Go находит такого рода ошибки, оно **паникует**(panic).\n",
     "\n",
     "Когда происходит паника, выполнение программы останавливается, выполняются все отложенные функции горутины, в которой произошла паника, и программа падает с выводом сообщения. Это сообщение содержит **значение паники**(panic value), которое обычно является сообщением об ошибке, и **трейс стека**(stack trace - стек вызовов функций) каждой активной во время паники горутины. Обычно этого сообщения бывает достаточно для определения причины паники.\n",
     "\n",
@@ -24,58 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f(3)\n",
-      "f(2)\n",
-      "f(1)\n",
-      "defer 1\n",
-      "defer 2\n",
-      "defer 3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "panic: runtime error: integer divide by zero\n",
-      "\n",
-      "goroutine 67 [running]:\n",
-      "runtime/debug.Stack(0xc400000008, 0x7fb57a9cf450, 0xc42012e440)\n",
-      "\t/usr/local/go/src/runtime/debug/stack.go:24 +0xa9\n",
-      "github.com/yunabe/lgo/core.(*resultCounter).recordResult(0xc42012e428, 0x7fb57a8e1160, 0x7fb57acf1470)\n",
-      "\t/home/yunus/Documents/src/go/src/github.com/yunabe/lgo/core/core.go:95 +0xce\n",
-      "github.com/yunabe/lgo/core.(*resultCounter).recordResultInDefer(0xc42012e428)\n",
-      "\t/home/yunus/Documents/src/go/src/github.com/yunabe/lgo/core/core.go:100 +0x3b\n",
-      "panic(0x7fb57a8e1160, 0x7fb57acf1470)\n",
-      "\t/usr/local/go/src/runtime/panic.go:491 +0x294\n",
-      "github.com/yunabe/lgo/sess7b2274696d65223a313533343139343335383332373238353234347d/exec2.LgoExport_f(0x0)\n",
-      "\t/home/yunus/Documents/src/go/src/github.com/yunabe/lgo/sess7b2274696d65223a313533343139343335383332373238353234347d/exec2/src.go:7 +0x1c0\n",
-      "github.com/yunabe/lgo/sess7b2274696d65223a313533343139343335383332373238353234347d/exec2.LgoExport_f(0x1)\n",
-      "\t/home/yunus/Documents/src/go/src/github.com/yunabe/lgo/sess7b2274696d65223a313533343139343335383332373238353234347d/exec2/src.go:10 +0x18f\n",
-      "github.com/yunabe/lgo/sess7b2274696d65223a313533343139343335383332373238353234347d/exec2.LgoExport_f(0x2)\n",
-      "\t/home/yunus/Documents/src/go/src/github.com/yunabe/lgo/sess7b2274696d65223a313533343139343335383332373238353234347d/exec2/src.go:10 +0x18f\n",
-      "github.com/yunabe/lgo/sess7b2274696d65223a313533343139343335383332373238353234347d/exec2.LgoExport_f(0x3)\n",
-      "\t/home/yunus/Documents/src/go/src/github.com/yunabe/lgo/sess7b2274696d65223a313533343139343335383332373238353234347d/exec2/src.go:10 +0x18f\n",
-      "github.com/yunabe/lgo/sess7b2274696d65223a313533343139343335383332373238353234347d/exec2.LgoExport_main()\n",
-      "\t/home/yunus/Documents/src/go/src/github.com/yunabe/lgo/sess7b2274696d65223a313533343139343335383332373238353234347d/exec2/src.go:14 +0x31\n",
-      "github.com/yunabe/lgo/sess7b2274696d65223a313533343139343335383332373238353234347d/exec2.lgo_init()\n",
-      "\t/home/yunus/Documents/src/go/src/github.com/yunabe/lgo/sess7b2274696d65223a313533343139343335383332373238353234347d/exec2/src.go:19 +0x27\n",
-      "github.com/yunabe/lgo/cmd/runner.loadShared.func3()\n",
-      "\t/home/yunus/Documents/src/go/src/github.com/yunabe/lgo/cmd/runner/runner.go:62 +0x26\n",
-      "github.com/yunabe/lgo/core.startExec.func1(0xc42012e3f0, 0xc420128790)\n",
-      "\t/home/yunus/Documents/src/go/src/github.com/yunabe/lgo/core/core.go:256 +0x83\n",
-      "created by github.com/yunabe/lgo/core.startExec\n",
-      "\t/home/yunus/Documents/src/go/src/github.com/yunabe/lgo/core/core.go:253 +0xcb\n",
-      "main routine failed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import \"fmt\"\n",
     "\n",
@@ -87,16 +38,51 @@
     "\n",
     "func main() {\n",
     "    f(3)\n",
-    "}\n",
-    "\n",
-    "main()"
+    "}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Также в Go возможно **восстановиться** от паники. Восстановление не приведёт к падению программы."
+    "Также в Go возможно **восстановиться** после паники. Если встроенная функция **recover** вызывается в отложенной(deferred) функции и функция, содержащая отложенную функцию, паникует, то recover останавливает процесс паники и возвращает значение паники. Паникующая функция не выполняется дальше места, где произошла паника, а завершается нормально, т.е. с возвратом значения. Если recover вызвать в любой другой момент, то она просто возвращает nil и ничего особенного не происходит. Пример:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "panic message: STOP\n"
+     ]
+    }
+   ],
+   "source": [
+    "import \"fmt\"\n",
+    "\n",
+    "func foo() (value int, err error) {\n",
+    "    defer func() {\n",
+    "        if p := recover(); p != nil {\n",
+    "            err = fmt.Errorf(\"panic message: %v\", p)\n",
+    "        }\n",
+    "    }()\n",
+    "    \n",
+    "    panic(\"STOP\")\n",
+    "}\n",
+    "\n",
+    "_, e := foo()\n",
+    "fmt.Sprint(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Восстановление от паники можно использовать для выполнения какого-либо последнего действия перед завершением программы. Считается плохой практикой без явной необходимости восстанавливаться от паники, т.к. после паники значение переменных пакета редко бывает определённым. Восстановление от паники внутри пакета может быть хорошим способом обработки сложной ошибки, но в общем случае не нужно пытаться восстановиться от ошибки в другом пакете или функции, которую не контролируете. Публичное API должно возвращать ошибки в случае неудачи. Не от всех паник можно восстановиться: нехватка памяти вызовет завершение программы в любом случае с выводом сообщения."
    ]
   }
  ],
