--- a/07.Интерфейсы/04.Type assertion.ipynb
+++ b/07.Интерфейсы/04.Type assertion.ipynb
@@ -63,7 +63,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. **Т является интерфейсным типом**. В этом случае проверяется удовлетворяет ли динамический тип x интерфейсному типу T. Если удовлетворяет, то результатом операции является значение интерфейсного типа T, у которого динамические тип и значение точно такие же, как и у интерфейсного значения x. Другими словами, type assertion с интерфейсным типом изменяет тип выражения, возможно позволяя получить доступ к большему количеству методов."
+    "2. **Т является интерфейсным типом**. В этом случае проверяется удовлетворяет ли динамический тип x интерфейсному типу T. Если удовлетворяет, то результатом операции является значение интерфейсного типа T, у которого динамические тип и значение точно такие же, как и у интерфейсного значения x. Другими словами, type assertion с интерфейсным типом изменяет тип выражения, возможно позволяя получить доступ к большему количеству методов. Если динамический тип x не удовлетворяет интерфейсу T, то происходит паника."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var w io.Writer\n",
+    "w = os.Stdout\n",
+    "// Динамический тип w равен *os.File и этот тип удовлетворяет интерфейсу io.ReadWriter.\n",
+    "// Именно поэтому работает следующий код.\n",
+    "rw := w.(io.ReadWriter)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вне зависимости от того какой тип T используется в операции type assertion(конкретный или интерфейсный), если операнд(т.е. x) является nil'ом, то происходит паника:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var w io.ReadWriter\n",
+    "var r io.Reader\n",
+    "r = w\n",
+    "// Следующая строка вызовет панику.\n",
+    "r = w.(io.Reader)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для того чтобы не вызывать панику при вызове операции type assertion, можно воспользоваться второй переменной, указывающей на результат преобразования:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "false\n"
+     ]
+    }
+   ],
+   "source": [
+    "import \"bytes\"\n",
+    "\n",
+    "var w io.Writer = os.Stdout\n",
+    "f, ok := w.(*os.File)\n",
+    "fmt.Println(ok)\n",
+    "\n",
+    "// type assertion не проходит, но нет также и паники. b равен nil.\n",
+    "b, ok := w.(*bytes.Buffer)\n",
+    "fmt.Sprint(ok)"
    ]
   }
  ],
