--- a/07.Интерфейсы/04.Type assertion.ipynb
+++ b/07.Интерфейсы/04.Type assertion.ipynb
@@ -131,6 +131,112 @@
     "b, ok := w.(*bytes.Buffer)\n",
     "fmt.Sprint(ok)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Type switch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для того чтобы не писать длинные цепочки конструкций вида if else при использовании операций type assertion можно воспользоваться специальным видом оператора switch, который называется **type switch**. В самом простом виде этот оператор состоит из операнда **x.(type)** - здесь type это буквально текст, который нужно набирать, а не какой-то другой тип, который нужно подставлять - и вариантов case для каждого интересующего нас типа. Оператор type switch позволяет нам определить несколько направлений ветвления в зависимости от динамического типа интерфейсного значения x:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "TRUE\n",
+      "UNKNOWN\n"
+     ]
+    }
+   ],
+   "source": [
+    "func foo(x interface{}) string {\n",
+    "    switch x.(type) {\n",
+    "        case nil:\n",
+    "            return \"nil\"\n",
+    "        \n",
+    "        case int:\n",
+    "            return fmt.Sprintf(\"%d\", x)\n",
+    "        \n",
+    "        case bool:\n",
+    "            // Каждый case это новый лексический блок, в котором переменная с таким\n",
+    "            // же названием как и в внешнем блоке, может перекрыть внешнюю.\n",
+    "            x := x.(bool)\n",
+    "            if x {\n",
+    "                return \"TRUE\"\n",
+    "            }\n",
+    "            return \"FALSE\"\n",
+    "        \n",
+    "        default:\n",
+    "            return \"UNKNOWN\"\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "fmt.Println(foo(23))\n",
+    "fmt.Println(foo(true))\n",
+    "fmt.Sprint(foo(1.2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В этом примере в случае case bool после того как мы уже точно знали, что динамический тип x равен bool, мы провели операцию type assertion, чтобы получить значение типа bool(в операторе if можно использовать только такие значения). Оператор type switch позволяет выполнить это действие один раз в самом начале и в каждом case'е операнд будет иметь такой тип, который используется в этом case'e. Но здесь есть и исключение: когда в case'е указано несколько типов, то этот case получает исходное интерфейсное значение:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "TRUE\n",
+      "UNKNOWN\n"
+     ]
+    }
+   ],
+   "source": [
+    "func foo(x interface{}) string {\n",
+    "    switch x := x.(type) {\n",
+    "        case nil:\n",
+    "            return \"nil\"\n",
+    "        \n",
+    "        case int, uint:\n",
+    "            // Здесь x имеет тип interface{}.\n",
+    "            return fmt.Sprintf(\"%d\", x)\n",
+    "        \n",
+    "        case bool:\n",
+    "            // x имеет тип bool.\n",
+    "            if x {\n",
+    "                return \"TRUE\"\n",
+    "            }\n",
+    "            return \"FALSE\"\n",
+    "        \n",
+    "        default:\n",
+    "            return \"UNKNOWN\"\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "fmt.Println(foo(23))\n",
+    "fmt.Println(foo(true))\n",
+    "fmt.Sprint(foo(1.2))"
+   ]
   }
  ],
  "metadata": {
