--- a/08.Горутины и каналы/01.Горутины.ipynb
+++ b/08.Горутины и каналы/01.Горутины.ipynb
@@ -25,6 +25,60 @@
     "f()    // Обычный вызов f, необходимо ждать до окончания выполнения этой функции.\n",
     "go f() // Создаётся новая горутина, которая вызывает функцию f. Нет никаких ожиданий."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Рассмотрим пример(из папки spinner):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "package main\n",
+    "\n",
+    "import (\n",
+    "\t\"fmt\"\n",
+    "\t\"time\"\n",
+    ")\n",
+    "\n",
+    "func main() {\n",
+    "\tgo spinner(100 * time.Millisecond)\n",
+    "\tconst n = 45\n",
+    "\tfibN := fib(n)\n",
+    "\tfmt.Printf(\"\\rFibonacci(%d) = %d\\n\", n, fibN)\n",
+    "}\n",
+    "\n",
+    "func spinner(delay time.Duration) {\n",
+    "\tfor {\n",
+    "\t\tfor _, r := range `-\\|/` {\n",
+    "\t\t\tfmt.Printf(\"\\r%c\", r)\n",
+    "\t\t\ttime.Sleep(delay)\n",
+    "\t\t}\n",
+    "\t}\n",
+    "}\n",
+    "\n",
+    "func fib(x int) int {\n",
+    "\tif x < 2 {\n",
+    "\t\treturn x\n",
+    "\t}\n",
+    "\n",
+    "\treturn fib(x-1) + fib(x-2)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В этой программе создаётся отдельная горутина spinner, чтобы пользователь видел анимацию прогресса пока вычисляется число Фибоначчи в основной горутине. После вычисления числа Фибоначчи функция main завершает выполнение. Когда это случается, останавливаются также и остальные горутины. Кроме как завершением main или выходом из программы **нет другого** программного способа, используя который одна горутина может завершить другую. Но горутины могут взаимодействовать между собой, чтобы сообщить, что нужно завершиться.\n",
+    "\n",
+    "Воспользовавшись горутинами, мы смогли представить программу в виде двух независимых единиц: анимация и вычисление числа Фибоначчи. Каждая определена в отдельной функции, но выполняются конкурентно."
+   ]
   }
  ],
  "metadata": {
