--- a/08.Горутины и каналы/02.Каналы.ipynb
+++ b/08.Горутины и каналы/02.Каналы.ipynb
@@ -68,6 +68,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Из одного канала могут извлекать данные несколько горутин, также же как и несколько горутин могут отправлять значения в него.\n",
+    "\n",
     "Канал, который создаётся простым вызовом make, называется **небуферизированным**(unbuffered) каналом, но make поддерживает и необъязательный второй целочисленный аргумент, который называют **вместительностью**(capacity) канала. Если вместительность не равна 0, то создаётся **буферизированный** канал:"
    ]
   },
@@ -353,6 +355,57 @@
     "\tgo squarer(naturals, squares)\n",
     "\tprinter(squares)\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Буферизированные каналы"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Буферизированный канал можно рассматривать как очередь элементов. Максимальный размер очереди определяется при создании канала в функции make через аргумент вместительности(capacity). Пример:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Буферизированный канал, который может хранить максимум 3 строки.\n",
+    "ch := make(chan string, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Операция отправки добавляет элемент в конец очереди, а операция получения извлекает элемент с её начала. Если очередь полностью заполнена, то операция отправки блокируется до момента пока какая-либо другая горутина не извлечёт значение из очереди. И наоборот, операция получения блокируется, если очередь пустая пока значения не будут отправлены в неё. В созданный нами канал можно отправлять до трёх значений без блокировки:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ch <- \"A\"\n",
+    "ch <- \"B\"\n",
+    "ch <- \"C\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Если попытаться ещё раз отправить значение в канал, то оно приведёт к блокировке. Если мы извлечём значение из канала, то он будет не пустым и не полностью заполненным. Тогда операция отправки или получения не приведёт к блокировке, т.е. эти операции могут быть выполнены без синхронизации между собой как это было в случае с небуферизированными каналами.\n",
+    "\n",
+    "Встроенная функция **cap** для каналов возвращает его вместительность, а **len** - текущий размер очереди значений."
    ]
   }
  ],
